[package]
name = "xfbridge"
version = "0.0.1"
edition = "2021"
authors = ["Triston Plummer"]

[lib]
name = "xfbridge"
path = "src/lib.rs"

[dependencies]
serde-aux = "3.0.1"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
dotenv = "0.15.0"

[dev-dependencies.tokio]
version = "1.18"
features = ["rt", "macros"]